--- a/jswitch-client/pom.xml
+++ b/jswitch-client/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>jswitch</artifactId>
         <groupId>com.tejchen</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +16,6 @@
         <dependency>
             <groupId>com.tejchen</groupId>
             <artifactId>jswitch-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- zookeeper相关 -->
