--- a/jswitch-common/pom.xml
+++ b/jswitch-common/pom.xml
@@ -6,10 +6,11 @@
         <artifactId>jswitch</artifactId>
         <groupId>com.tejchen</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>jswitch-common</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -29,5 +30,4 @@
             <version>5.4.0.Final</version>
         </dependency>
     </dependencies>
-
 </project>
