后端开发 前端基于 vue + iview 开发，前后端分离

--- a/jswitch-server/pom.xml
+++ b/jswitch-server/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.tejchen</groupId>
+		<artifactId>jswitch</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.tejchen</groupId>
 	<artifactId>jswitch-server</artifactId>
@@ -22,7 +22,6 @@
 		<dependency>
 			<groupId>com.tejchen</groupId>
 			<artifactId>jswitch-common</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!--<dependency>-->
@@ -102,6 +101,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
