--- a/jswitch-server/src/main/resources/application.yml
+++ b/jswitch-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/jswitch?useUnicode=true&characterEncoding=utf8
     username: root
-    password: root1234
+    password: root
 logging:
   level:
     root: debug
