--- a/jswitch-server/pom.xml
+++ b/jswitch-server/pom.xml
@@ -49,6 +49,16 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>aopalliance</groupId>
+			<artifactId>aopalliance</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 
 		<!-- test -->
 		<dependency>
