--- a/jswitch-client/pom.xml
+++ b/jswitch-client/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
